Add steps to prevent file mode changes and reset state
This ensures consistent repository state during workflow runs by disabling file mode changes and resetting the repository to a clean state. It helps avoid potential issues with permissions or uncommitted changes.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,12 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
+      - name: Disable file mode changes
+        run: git config core.fileMode false
+
+      - name: Reset repository to clean state
+        run: git reset --hard
+
       - name: Cache Gradle Files
         uses: actions/cache@v3
         with:
