feat: Enhance repository cleanup in publish workflow
Added `git clean -fdx` to ensure untracked files and directories are removed during the reset process. This makes the workflow more robust by fully reverting to a clean state before proceeding with subsequent steps.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,9 @@ jobs:
         run: git config core.fileMode false
 
       - name: Reset repository to clean state
-        run: git reset --hard
+        run: |
+          git reset --hard
+          git clean -fdx
 
       - name: Cache Gradle Files
         uses: actions/cache@v3
