feat: Update LICENSE change date and improve release workflow
Updated the LICENSE file with a new change date of 2026-01-01. Enhanced the GitHub Actions release workflow by adding environment variables and additional flags for better stability and debugging.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,9 +45,11 @@ jobs:
 
       - name: Run Release (Bump version and tag)
         if: github.event_name == 'push'
-        run: bash ./gradlew release
+        run: bash ./gradlew release --no-daemon --stacktrace
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIT_USERNAME: ${{ github.actor }}
+          GIT_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
 
       #      - name: Run Tests
       #        run: bash ./gradlew clean test --no-daemon --stacktrace
