feat: add new chunking strategies to ChunkStrategy enum
Introduced new chunking strategies (`NONE`, `BY_SIZE`, `BY_METHODS`) in the `ChunkStrategy` enum to improve code splitting options. Updated `.gitignore` to exclude additional Kotlin compilation cache files. Removed unused compiled class files during cleanup.

--- a/.gitignore
+++ b/.gitignore
@@ -1956,3 +1956,4 @@ tmp/
 /build/test-results/test/binary/output.bin.idx
 /build/test-results/test/binary/results.bin
 /build/test-results/test/TEST-com.clipcraft.util.ClipCraftIgnoreUtilTest.xml
+/build/kotlin/compileKotlin/cacheable/dirty-sources.txt
