--- a/.gitignore
+++ b/.gitignore
@@ -19,13 +19,13 @@
 *.swo
 
 # Build, generated, and dependency directories
-.gradle/                # Gradle cache and generated files
-build/                  # Build output directory
-target/                 # Maven build output (if applicable)
-out/                    # Other output directories
+.gradle
+build/
+target/
+out/
 
 # Allow Gradle wrapper jar for builds even when ignoring other Gradle files
-!gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/*
 
 # Local configuration files (do not commit sensitive information)
 local.properties
@@ -45,25 +45,3 @@ tmp/
 
 # Environment configuration (customize as needed)
 .env
-/.gradle/7.6/checksums/checksums.lock
-/.gradle/7.6/dependencies-accessors/dependencies-accessors.lock
-/.gradle/7.6/dependencies-accessors/gc.properties
-/.gradle/7.6/fileChanges/last-build.bin
-/.gradle/7.6/fileHashes/fileHashes.lock
-/.gradle/7.6/gc.properties
-/.gradle/8.10/checksums/checksums.lock
-/.gradle/8.10/checksums/md5-checksums.bin
-/.gradle/8.10/checksums/sha1-checksums.bin
-/.gradle/8.10/executionHistory/executionHistory.bin
-/.gradle/8.10/executionHistory/executionHistory.lock
-/.gradle/8.10/expanded/expanded.lock
-/.gradle/8.10/fileChanges/last-build.bin
-/.gradle/8.10/fileHashes/fileHashes.bin
-/.gradle/8.10/fileHashes/fileHashes.lock
-/.gradle/8.10/fileHashes/resourceHashesCache.bin
-/.gradle/8.10/gc.properties
-/.gradle/buildOutputCleanup/buildOutputCleanup.lock
-/.gradle/buildOutputCleanup/cache.properties
-/.gradle/buildOutputCleanup/outputFiles.bin
-/.gradle/vcs-1/gc.properties
-/.gradle/file-system.probe
