--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,8 +51,8 @@ jobs:
           GIT_USERNAME: ${{ github.actor }}
           GIT_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
 
-      #      - name: Run Tests
-      #        run: bash ./gradlew clean test --no-daemon --stacktrace
+      - name: Run Tests
+        run: bash ./gradlew clean test --no-daemon --stacktrace
 
       - name: Build Plugin
         run: bash ./gradlew clean buildPlugin --no-daemon --stacktrace
