--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,18 +2,19 @@ name: Build and Publish Plugin
 
 on:
   pull_request:
-    branches:
-      - main
+    branches: [main]
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build:
+    # 1) Add "permissions" block to give the GITHUB_TOKEN write access to code
+    permissions:
+      contents: write  # needed for pushing tags or commits
+
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -24,17 +25,6 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-      - name: Confirm gradlew permissions
-        run: ls -l ./gradlew
-
-      - name: Disable file mode changes
-        run: git config core.fileMode false
-
-      - name: Reset repository to clean state
-        run: |
-          git reset --hard
-          git clean -fdx
-
       - name: Cache Gradle Files
         uses: actions/cache@v3
         with:
@@ -43,25 +33,30 @@ jobs:
             ~/.gradle/wrapper
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle/wrapper/gradle-wrapper.properties') }}
 
-      - name: Run Release (Bump version and tag)
+      - name: Set up Git config so we can push tags
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          # Force the remote to use token-based HTTPS auth:
+          git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/tabano86/ClipCraft.git
+
+      - name: Run Release
         if: github.event_name == 'push'
-        run: bash ./gradlew release --no-daemon --stacktrace
+        run: ./gradlew release --no-daemon --stacktrace
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GIT_USERNAME: ${{ github.actor }}
-          GIT_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run Tests
-        run: bash ./gradlew clean test --no-daemon --stacktrace
+        run: ./gradlew clean test --no-daemon --stacktrace
 
       - name: Build Plugin
-        run: bash ./gradlew clean buildPlugin --no-daemon --stacktrace
+        run: ./gradlew clean buildPlugin --no-daemon --stacktrace
 
       - name: Patch Plugin XML
-        run: bash ./gradlew patchPluginXml --no-daemon --stacktrace
+        run: ./gradlew patchPluginXml --no-daemon --stacktrace
 
       - name: Publish Plugin
         if: github.event_name == 'push'
         env:
           JB_PLUGIN_REPOSITORY_TOKEN: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
-        run: bash ./gradlew publishPlugin -PpublishToken=$JB_PLUGIN_REPOSITORY_TOKEN --no-daemon --stacktrace
+        run: ./gradlew publishPlugin -PpublishToken=$JB_PLUGIN_REPOSITORY_TOKEN --no-daemon --stacktrace
