--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,7 +40,6 @@ jobs:
 
       - name: Fetch and Sync Remote Tags
         run: |
-          # Fetch the latest tags and reset the local branch
           git fetch --prune --tags
           git reset --hard origin/main
 
@@ -51,7 +50,7 @@ jobs:
         run: |
           max_attempts=3
           attempt=1
-          until ./gradlew release --no-daemon --stacktrace; do
+          until bash ./gradlew release --no-daemon --stacktrace; do
             if [ $attempt -ge $max_attempts ]; then
               echo "Release failed after $attempt attempts."
               exit 1
@@ -67,18 +66,18 @@ jobs:
           JB_PLUGIN_REPOSITORY_TOKEN: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
 
       - name: Run Tests
-        run: ./gradlew clean test --no-daemon --stacktrace
+        run: bash ./gradlew clean test --no-daemon --stacktrace
 
       - name: Build Plugin
-        run: ./gradlew clean buildPlugin --no-daemon --stacktrace
+        run: bash ./gradlew clean buildPlugin --no-daemon --stacktrace
 
       - name: Patch Plugin XML
-        run: ./gradlew patchPluginXml --no-daemon --stacktrace
+        run: bash ./gradlew patchPluginXml --no-daemon --stacktrace
 
       - name: Publish Plugin
         if: github.event_name == 'push'
         env:
           JB_PLUGIN_REPOSITORY_TOKEN: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
-        run: ./gradlew publishPlugin \
+        run: bash ./gradlew publishPlugin \
           -Dorg.jetbrains.intellij.pluginRepository.publish.token=$JB_PLUGIN_REPOSITORY_TOKEN \
           --no-daemon --stacktrace
