--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,10 +6,24 @@ on:
   push:
     branches: [main]
 
+env:
+  # Global environment variables (if needed) can be defined here.
+  # Note: GITHUB_TOKEN is automatically injected.
+  # JB_PLUGIN_REPOSITORY_TOKEN must be set in repository secrets.
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Verify JB_PLUGIN_REPOSITORY_TOKEN is Set
+        run: |
+          if [ -z "$JB_PLUGIN_REPOSITORY_TOKEN" ]; then
+            echo "Error: JB_PLUGIN_REPOSITORY_TOKEN is not set."
+            exit 1
+          fi
+        env:
+          JB_PLUGIN_REPOSITORY_TOKEN: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
+
       - uses: actions/checkout@v3
 
       - name: Set up JDK 17
@@ -18,7 +32,7 @@ jobs:
           distribution: temurin
           java-version: '17'
 
-      - name: Make gradlew executable
+      - name: Make gradlew Executable
         run: chmod +x ./gradlew
 
       - name: Cache Gradle Directories
@@ -30,13 +44,11 @@ jobs:
             .gradle
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle/wrapper/gradle-wrapper.properties') }}
 
-      - name: Run Build Tasks
-        run: |
-          # Combine tasks to reduce repeated configuration overhead.
-          bash ./gradlew clean test buildPlugin patchPluginXml --parallel --stacktrace
+      - name: Build, Test, and Patch Plugin
+        run: bash ./gradlew clean test buildPlugin patchPluginXml --no-daemon --stacktrace --parallel
 
       - name: Upload Plugin Artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: plugin-artifact
           path: build/distributions/
@@ -46,6 +58,15 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Verify JB_PLUGIN_REPOSITORY_TOKEN is Set
+        run: |
+          if [ -z "$JB_PLUGIN_REPOSITORY_TOKEN" ]; then
+            echo "Error: JB_PLUGIN_REPOSITORY_TOKEN is not set."
+            exit 1
+          fi
+        env:
+          JB_PLUGIN_REPOSITORY_TOKEN: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
+
       - uses: actions/checkout@v3
 
       - name: Set up JDK 17
@@ -54,7 +75,7 @@ jobs:
           distribution: temurin
           java-version: '17'
 
-      - name: Make gradlew executable
+      - name: Make gradlew Executable
         run: chmod +x ./gradlew
 
       - name: Cache Gradle Directories
@@ -66,26 +87,32 @@ jobs:
             .gradle
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle/wrapper/gradle-wrapper.properties') }}
 
-      - name: Set up Git config with PAT for Release
-        env:
-          RELEASE_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      - name: Configure Git Remote for Tag Push
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
-          # Use the dedicated RELEASE_TOKEN to ensure push (tag creation) is permitted.
-          git remote set-url origin https://${{ secrets.RELEASE_TOKEN }}@github.com/tabano86/ClipCraft.git
+          # Use the built-in GITHUB_TOKEN for pushing tags/commits.
+          git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
 
-      - name: Fetch and Sync Remote Tags
+      - name: Sync Repository with Remote
         run: |
           git fetch --prune --tags
           git reset --hard origin/main
 
-      - name: Run Release and Publish Plugin
+      - name: Run Release and Publish Plugin with Retry
         env:
-          RELEASE_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           JB_PLUGIN_REPOSITORY_TOKEN: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
         run: |
-          # Run both tasks in one Gradle invocation to minimize overhead.
-          bash ./gradlew release publishPlugin \
+          max_attempts=3
+          attempt=1
+          until bash ./gradlew release publishPlugin \
             -Dorg.jetbrains.intellij.pluginRepository.publish.token=$JB_PLUGIN_REPOSITORY_TOKEN \
-            --parallel --stacktrace
+            --no-daemon --stacktrace --parallel; do
+            if [ $attempt -ge $max_attempts ]; then
+              echo "Release and publish failed after $attempt attempts."
+              exit 1
+            fi
+            echo "Attempt $attempt failed, retrying in 10 seconds..."
+            sleep 10
+            attempt=$((attempt + 1))
+          done
