feat: enhance publish workflow with retries and token checks
Add retries for the release and publish steps to improve resilience. Introduce verification for JB_PLUGIN_REPOSITORY_TOKEN to ensure proper configuration. Simplify Git remote setup by replacing custom RELEASE_TOKEN with GITHUB_TOKEN.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,10 +6,10 @@ on:
   push:
     branches: [main]
 
-env:
-  # Global environment variables (if needed) can be defined here.
-  # Note: GITHUB_TOKEN is automatically injected.
-  # JB_PLUGIN_REPOSITORY_TOKEN must be set in repository secrets.
+#env:
+#   Global environment variables (if needed) can be defined here.
+#   Note: GITHUB_TOKEN is automatically injected.
+#   JB_PLUGIN_REPOSITORY_TOKEN must be set in repository secrets.
 
 jobs:
   build:
