--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,50 +12,50 @@ on:
 #   JB_PLUGIN_REPOSITORY_TOKEN must be set in repository secrets.
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Verify JB_PLUGIN_REPOSITORY_TOKEN is Set
-        run: |
-          if [ -z "$JB_PLUGIN_REPOSITORY_TOKEN" ]; then
-            echo "Error: JB_PLUGIN_REPOSITORY_TOKEN is not set."
-            exit 1
-          fi
-        env:
-          JB_PLUGIN_REPOSITORY_TOKEN: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
-
-      - uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: '17'
-
-      - name: Make gradlew Executable
-        run: chmod +x ./gradlew
-
-      - name: Cache Gradle Directories
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-            .gradle
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle/wrapper/gradle-wrapper.properties') }}
-
-      - name: Build, Test, and Patch Plugin
-        run: bash ./gradlew clean test buildPlugin patchPluginXml --no-daemon --stacktrace --parallel
-
-      - name: Upload Plugin Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: plugin-artifact
-          path: build/distributions/
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Verify JB_PLUGIN_REPOSITORY_TOKEN is Set
+#        run: |
+#          if [ -z "$JB_PLUGIN_REPOSITORY_TOKEN" ]; then
+#            echo "Error: JB_PLUGIN_REPOSITORY_TOKEN is not set."
+#            exit 1
+#          fi
+#        env:
+#          JB_PLUGIN_REPOSITORY_TOKEN: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
+#
+#      - uses: actions/checkout@v3
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: temurin
+#          java-version: '17'
+#
+#      - name: Make gradlew Executable
+#        run: chmod +x ./gradlew
+#
+#      - name: Cache Gradle Directories
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.gradle/caches
+#            ~/.gradle/wrapper
+#            .gradle
+#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle/wrapper/gradle-wrapper.properties') }}
+#
+#      - name: Build, Test, and Patch Plugin
+#        run: bash ./gradlew clean test buildPlugin patchPluginXml --no-daemon --stacktrace --parallel
+#
+#      - name: Upload Plugin Artifact
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: plugin-artifact
+#          path: build/distributions/
 
   release:
     if: github.event_name == 'push'
-    needs: build
+#    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Verify JB_PLUGIN_REPOSITORY_TOKEN is Set
